[[bin]]
name = 'git-remote-gosh'
path = 'src/main.rs'

[lib]
name = 'git_remote_gosh'
path = 'src/lib.rs'

[package]
edition = '2021'
keywords = [
  'git-remote',
  'git',
  'gosh',
]
name = 'git-remote-gosh'
resolver = '2'
version = '0.1.0'

[profile.profiling]
debug = 1
inherits = 'release'

[dev-dependencies]
env_logger = "*"
tracing = {version = "0.1", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}

[dependencies]
async-trait = '^0'
base64 = '^0'
base64-serde = '^0'
bytes = '^1'
cached = {version = "^0.38.0", features = ["default"]}
form-data = '^0'
futures = '^0'
git-diff = '^0'
git-hash = '^0'
git-object = '^0'
git-odb = '^0'
git-repository = '^0'
git-revision = '^0'
git-traverse = '^0'
git2 = '^0'
hex = '^0'
indexmap = '^1'
lazy_static = '^1'
log = '^0'
log4rs = '^1'
lru = '^0.8.1'
openssl = {version = "^0", features = ["vendored"]}
primitive-types = '^0'
serde_json = '^1'
sha256 = '1.0.3'
shellexpand = '^2.1.0'
test-log = '^0'
tokio-retry = '^0'
tracing-log = '^0.1.3'

[dependencies.data-contract-macro-derive]
path = 'crates/data-contract-macro-derive'

[dependencies.diffy]
path = 'crates/diffy-patched'

[dependencies.serde]
features = ['derive']
version = '^1'

[dependencies.tracing-futures]
default-features = true
version = '^0'

[dependencies.tracing]
features = [
  'log',
  'attributes',
  'std',
]
version = '^0'

[dependencies.reqwest]
features = [
  'blocking',
  'gzip',
  'json',
  'multipart',
  'stream',
]
version = '^0'

[dependencies.reqwest-middleware]
# wait until https://github.com/TrueLayer/reqwest-middleware/pull/49 appears in crates.io
git = 'https://github.com/TrueLayer/reqwest-middleware'
package = 'reqwest-middleware'

[dependencies.reqwest-retry]
# wait until https://github.com/TrueLayer/reqwest-middleware/pull/49 appears in crates.io
git = 'https://github.com/TrueLayer/reqwest-middleware'
package = 'reqwest-retry'

[dependencies.reqwest-tracing]
# wait until https://github.com/TrueLayer/reqwest-middleware/pull/49 appears in crates.io
git = 'https://github.com/TrueLayer/reqwest-middleware'
package = 'reqwest-tracing'

[dependencies.tokio]
features = ['full']
version = '1.20.1'

[dependencies.ton_client]
git = 'https://github.com/tonlabs/ever-sdk.git'
package = 'ton_client'
tag = '1.37.0'

[dependencies.ton_sdk]
git = 'https://github.com/tonlabs/ever-sdk.git'
package = 'ton_sdk'
tag = '1.37.0'

[dependencies.zstd]
default-features = false
version = '^0.11.0'

[patch.crates-io.tokio]
git = 'https://github.com/tokio-rs/tokio'
tag = 'tokio-1.20.1'
