[[bin]]
name = 'git-remote-gosh'
path = 'src/bin/main.rs'

[lib]
exclude = 'src/bin/*'
name = 'git_remote_gosh'
path = 'src/lib.rs'

[package]
edition = '2021'
keywords = ['git-remote', 'git', 'gosh']
name = 'git-remote-gosh'
resolver = '2'
rust-version = "1.65"
version = '3.0.0'

[profile.profiling]
debug = 1
inherits = 'release'

[dev-dependencies]
mockall = '^0'

[dependencies]
anyhow = '^1.0'
async-trait = '^0'
base64 = '^0.13.1'
base64-serde = '^0'
bytes = '^1'
cached = {version = '^0.38.0', features = ['default']}
derive_builder = '^0.11'
form-data = '^0'
futures = '^0'
git-diff = '^0'
git-hash = '^0'
git-object = '^0'
git-odb = '^0'
git-repository = '^0'
git-revision = '^0'
git-traverse = '^0'
hex = '^0'
indexmap = '^1'
lru = '^0.8.1'
mockall_double = '^0'
object-pool = "0.5.4"
once_cell = "^1.16.0"
openssl = {version = '0.10', features = ['vendored']}
opentelemetry = {version = "0.18.0", features = ["rt-tokio"]}
opentelemetry-otlp = {version = "0.11.0", features = ["grpc-tonic"]}
opentelemetry-semantic-conventions = "0.10.0"
primitive-types = '^0.12'
serde_json = '^1.0'
sha256 = '1.0.3'
shellexpand = '^2.1.0'
tokio-retry = '^0'
tracing = "0.1"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
tracing-test = "0"

[dependencies.data-contract-macro-derive]
path = 'crates/data-contract-macro-derive'

[dependencies.diffy]
path = 'crates/diffy-patched'

[dependencies.serde]
features = ['derive']
version = '^1'

[dependencies.tracing-futures]
default-features = true
version = '^0'

[dependencies.reqwest]
features = ['blocking', 'gzip', 'json', 'multipart', 'stream']
version = '^0'

[dependencies.reqwest-middleware]
# wait until https://github.com/TrueLayer/reqwest-middleware/pull/49 appears in crates.io
git = 'https://github.com/TrueLayer/reqwest-middleware'
package = 'reqwest-middleware'

[dependencies.reqwest-retry]
# wait until https://github.com/TrueLayer/reqwest-middleware/pull/49 appears in crates.io
git = 'https://github.com/TrueLayer/reqwest-middleware'
package = 'reqwest-retry'

[dependencies.reqwest-tracing]
# wait until https://github.com/TrueLayer/reqwest-middleware/pull/49 appears in crates.io
git = 'https://github.com/TrueLayer/reqwest-middleware'
package = 'reqwest-tracing'

[dependencies.tokio]
features = ['full', 'rt']
version = '1.21.2'

[dependencies.ton_client]
git = 'https://github.com/tonlabs/ever-sdk.git'
package = 'ton_client'
tag = '1.38.1'

[dependencies.ton_sdk]
git = 'https://github.com/tonlabs/ever-sdk.git'
package = 'ton_sdk'
tag = '1.38.1'

[dependencies.zstd]
default-features = false
version = '^0.11.0'

[patch.crates-io.tokio]
git = 'https://github.com/tokio-rs/tokio'
tag = 'tokio-1.21.2'
