[package]
name = "git-remote-gosh"
version = "3.0.0"
edition = "2021"
keywords = ['git-remote', 'git', 'gosh']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = "4.1.8"
flate2 = "1.0.25"
serde_json = "1.0.92"
shellexpand = "3.0.0"
tar = "0.4.38"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["v4"] }
version-compare = "0.1.1"

[dependencies.gosh-builder-grpc-api]
git = 'https://github.com/gosh-sh/gosh-build-tools.git'
package = 'gosh-builder-grpc-api'