[package]
name = "git-remote-gosh"
version = "6.2.36"
edition = "2021"
keywords = ['git-remote', 'git', 'gosh']
rust-version = "1.70"

[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[dependencies]
anyhow = "1.0.69"
clap = "4.1.8"
serde_json = "1.0.92"
shellexpand = "3.0.0"
tar = "0.4.38"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["v4"] }
version-compare = "0.1.1"
zstd = "0.12.3"
