[[bin]]
name = 'git-remote-gosh_v6_0_0'
path = 'src/bin/main.rs'

[lib]
exclude = 'src/bin/*'
name = 'git_remote_gosh'
path = 'src/lib.rs'

[package]
build = 'build.rs'
edition = '2021'
keywords = ['git-remote', 'git', 'gosh']
name = 'git-remote-gosh'
resolver = '2'
rust-version = "1.68"
version = '6.0.32'

[profile.profiling]
debug = 1
inherits = 'release'

[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dev-dependencies]
mockall = '^0'

[dependencies]
anyhow = '1.0.69'
async-trait = '0.1.64'
base64 = '0.21.0'
base64-serde = '0.7.0'
bstr = "=1.2.0"
bytes = '^1'
cached = {version = '0.38.0', features = ['default']}
clap = "4.1.6"
derive_builder = '0.11.2'
form-data = '0.4.2'
futures = '0.3.26'
git-config = '=0.16.0'
git-diff = '0.26.2'
git-hash = '0.10.3'
git-object = '0.26.2'
git-odb = '0.40.2'
git-repository = '0.35.0'
git-revision = '0.10.4'
git-traverse = '0.22.2'
hex = '0.4.3'
indexmap = '1.9.2'
lru = '0.8.1'
memcache = { version = '0.17.0', default-features = false }  #! default features disables tls/openssl
mockall_double = '0.3.0'
object-pool = "0.5.4"
once_cell = "1.16.0"
opentelemetry = {version = "0.18.0", features = ["rt-tokio"]}
opentelemetry-otlp = {version = "0.11.0", features = ["grpc-tonic"]}
opentelemetry-semantic-conventions = "0.10.0"
primitive-types = '0.12.1'
proc-macro2 = "=1.0.52"
reqwest-middleware = "0.2.0"
reqwest-tracing = "0.4.0"
rmp-serde = "1.1.1"
rocksdb = "0.21.0"
serde_json = '1.0.93'
sha256 = '1.0.3'
shellexpand = '2.1.2'
thiserror = '1.0.38'
tokio-retry = '0.3.0'
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
tracing-test = "0"

[dependencies.data-contract-macro-derive]
path = 'crates/data-contract-macro-derive'

[dependencies.diffy]
path = 'crates/diffy-patched'

[dependencies.serde]
features = ['derive']
version = '1.0.152'

[dependencies.tracing-futures]
default-features = true
version = '0.2.5'

[dependencies.reqwest]
default-features = false
features = ['blocking', 'gzip', 'json', 'multipart', 'stream', 'rustls-tls']
version = '0.11.14'

[dependencies.tokio]
features = ['full', 'rt']
version = '1.21.2'

[dependencies.ton_client]
git = 'https://github.com/gosh-sh/ever-sdk.git'
default-features = false
features = ['std', 'rustls-tls-webpki-roots']
package = 'ton_client'
tag = "1.43.1-rustls"

[dependencies.ton_sdk]
git = 'https://github.com/gosh-sh/ever-sdk.git'
package = 'ton_sdk'
tag = "1.43.1-rustls"

[dependencies.zstd]
default-features = false
version = '0.11.2+zstd.1.5.2'
